# spotlight-genie

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  test-contacts.sh  tsconfig.json
.github/releases/: v1.0.0.md
.github/workflows/: ci.yml
design-system/spotlight-genie/: MASTER.md
designs/: spotlight-genie-ui.pen
docs/: TODO.md
plugins/: index.ts
plugins/core/: calculator.ts  web-search.ts
plugins/integrations/: clipboard.ts  contacts.ts  currency.ts  spotify.ts
releases/: Spotlight_Genie_1.0.0_aarch64.dmg
src/: App.vue
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  file_index.rs  lib.rs  main.rs  settings.rs
src-tauri/src/indexer/: apps.rs  mod.rs
src/components/: ActionBar.vue  CategoryBadge.vue  ResultItem.vue  ResultList.vue  SearchBar.vue  SettingsPanel.vue
src/composables/: useKeyboard.ts  usePlugins.ts  useSearch.ts  useTheme.ts  useWindowSize.ts
src/styles/: main.css
src/types/: index.ts
