[package]
name = "spotlight-genie"
version = "1.0.0"
description = "Cross-platform Spotlight/Alfred alternative"
authors = ["clarezoe"]
edition = "2021"

[lib]
name = "spotlight_genie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
walkdir = "2"
open = "5"
dirs = "5"
url = "2"
base64 = "0.22"
